# proto-language

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_local.txt
.claude/commands/: fix-issue.md
.github/scripts/: export_config.json  validate_exports.py
.github/workflows/: check_submodule.yml  checks.yml  claude.yml  integration-tests.yml  integration_tests.yml  release.yml  run-unit-tests.yml  submodule-check.yml  unit-tests.yml
bio_programming/: __init__.py  base_config.py  base_registry.py  logging_config.py
bio_programming/language/: __init__.py
bio_programming/storage/: README.md  __init__.py  helpers.py  models.py  store.py
bio_programming/utils/: __init__.py  export.py  helpers.py  infra.py
examples/: __init__.py
examples/bindcraft/: run_bindcraft_full.py  run_bindcraft_hallucination.py
examples/data/: Major pathways and complexes in human biology.xlsx  alphagenome_context_aavs1.txt  alphagenome_context_ccr5.txt  alphagenome_context_clybl.txt  alphagenome_context_hrosa26.txt  borzoi_targets_human.txt  creb_dna_design_left_flank.fasta  creb_dna_design_native_peak.fasta  creb_dna_design_prompt.fasta  creb_dna_design_right_flank.fasta  human_genes.fasta  human_genes.tsv  mscarlet_ires_zsgreen.txt  plasmid_context_cmv_20260308.txt  u5_prompts.fasta
examples/germinal/: antibody_presets.yaml  germinal_antibody_binder.py  run_germinal_pipeline.py
examples/json_schemas/: evo-toy.json  gcs_phrogs_example.json  multiple_segments.json  slow_mutator.json  toy.json  toy2.json
examples/jsons/: chromatin_accessibility_beam_search.json  evo-toy.json  evo2_phage_genome_fragment.json  evocas9_filter_pipeline.json  evocas9_rejection_sampling.json  gcs_phrogs_example.json  gene_expression_cassette.json  germinal_pdl1_binder.json  gradient_protein_hallucination.json  intron_design_alphagenome.json  intron_design_splicing.json  multiple_segments.json  program_intron_design.json  protein_binder_boltz2.json  protein_binder_design.json  protein_hunter.json  protein_ligand_boltz2.json  protein_quality_baseline.json  protein_symmetric_homotrimer.json  sigma70_promoter_tuning.json  slow_mutator.json  toy-multiple-optimizers.json  toy.json  toy2.json  vi_signaling_pathways__b2ar_to_tf_pathway__b2ar_to_tf_pathway.json
examples/notebooks/: binder-design.ipynb  esm2_example.ipynb  evo2_phage.ipynb  toy_example.ipynb  uniform_symmetric_protein.ipynb
examples/scripts/: __init__.py  beam_search_kv_caching.py  beam_search_utils.py  binder_design_rfdiffusion_mpnn.py  cancer_circuit.py  cas9_generation.py  demo_beam_search.py  epigenomics_morse_proto.py  evo2_example.py  evo2_nim_example.py  evo2_phage_example.py  evocas9_rejection_sampling.py  evocas9_topk.py  generate_intron_design_alphagenome_json.py  germinal_pdl1_sampling.py  gradient_protein_hallucination.py  malinois_k562_specificity_gradient_design.py  multi_segment_beam_search_kv_caching.py  program_intron_alphagenome.py  program_intron_design.py  program_symmetric_proteins.py  protein_hunter.py  proteinmpnn_ensemble_baseline.py  rejection_sampling_example.py  run_esmfold.py  run_program.py  topk_example.py  toy-multiple-optimizers.py  toy.py
examples/stress-test-programs/: 01-protein-plddt-esmfold.json  02-esm2-structure-scoring.json  03-globularity-symmetry.json  04-multi-construct-protein.json  05-heavy-multi-stage-pipeline.json  06-high-volume-plddt.json
genomic_programming/: __init__.py  base.py  base_config.py  base_registry.py  constraint.py  file_resolver.py  file_utils.py  generator.py  program.py  tool_cache.py  utils.py
genomic_programming/language/: __init__.py
genomic_programming/schemas/: __init__.py  tool_arg_schemas.py
genomic_programming/utils/: __init__.py  array.py  compute.py  file_resolution.py  helpers.py  infra.py  metadata.py  numpy_pydantic.py  structure.py
guides/: using-constraints.ipynb  using-generators.ipynb  using-optimizers.ipynb
language/: __init__.py  base.py  constraint.py  energy.py  generator.py  genome_design_filtering_pipeline.py  program.py  sequence.py  utils.py
notes/: README.md  batching.md  biological-design-loop.md  claude-code.md  component-planning-example.md  dev.md  error-handling.md  filesystem.md  planning-quick-reference.md  seeding.md  testing.md
proto_language/: __init__.py  __main__.py  base_config.py  base_registry.py  cli.py  logging_config.py
proto_language/constraint/: __init__.py  constraint_registry.py
proto_language/core/: __init__.py  constraint.py  construct.py  generator.py  optimizer.py  program.py  segment.py  sequence.py
proto_language/generator/: __init__.py  esm2_generator.py  esm3_generator.py  evo1_generator.py  evo2_generator.py  freebindcraft_generator.py  generator_registry.py  ligandmpnn_generator.py  msa_generator.py  position_weight_generator.py  progen2_generator.py  proteinmpnn_generator.py  random_nucleotide_generator.py  random_protein_generator.py  rfdiffusion_mpnn_binder_generator.py  rfdiffusion_proteinmpnn_binder_generator.py  semigreedy_mutation_generator.py
proto_language/language/: __init__.py
proto_language/optimizer/: __init__.py  beam_search_optimizer.py  cycling_optimizer.py  evolutionary_optimizer.py  gradient_optimizer.py  mcmc_optimizer.py  optimizer_registry.py  rejection_sampling_optimizer.py
proto_language/storage/: README.md  __init__.py  helpers.py  models.py  resolver.py  store.py
proto_language/utils/: __init__.py  alphafold2_binder.py  alphafold2_multimer.py  base.py  component_validation.py  docs_api.py  export.py  fasta.py  field_docs.py  gradients.py  helpers.py  io.py  logging_config.py  ml_optimizers.py  orf_selection.py  scheduling.py  scoring.py  sequence_logit_bias.py  (+2 more)
scripts/: __init__.py  beam_search_utils.py  demo_beam_search.py  evo2_example.py  evo2_nim_example.py  program_symmetric_proteins.py  run_esmfold.py  toy.py  toy2.json
tests/: README.md  conftest.py  test_codebase_consistency.py  test_config_field.py  test_docstring_consistency.py
(+680 files in other folders)
