[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-language"
version = "1.2.12"
description = "A high level programming language for generative biology"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Proto Team"}
]

requires-python = ">=3.10"

# Core dependencies
dependencies = [
    # Core framework
    "pydantic>=2.0",

    # Scientific computing
    "numpy>=1.20",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3.0",

    # Bioinformatics
    "biopython>=1.81",
    "biotite>=0.38.0,<1.2.0",
    "rdkit",
    "pymol-open-source",

    # Utilities
    "tqdm",
    "openpyxl",
]

[project.optional-dependencies]
# API + Agent server infrastructure
api = [
    # Environment
    "python-dotenv",

    # API server
    "fastapi>=0.104.0",
    "uvicorn[standard]",
    "sse-starlette>=1.6.5",

    # Database
    "sqlmodel>=0.0.8",
    "sqlalchemy>=2.0.0",
    "greenlet",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",

    # a cache (SSE pub/sub, cancellation flags)
    "cache>=5.0",

    # Cloud storage
    "google-cloud-storage",

    # Remote GPU execution


    # Used by deployment/
    "requests",
    "pyyaml",

    # AI agent
    "openai",
    "openai-agents[litellm]",
    "litellm",
    "ddgs",
    "rank-bm25",
    "httpx",
    "jsonpatch",
    "jsonpointer",
    "pick>=2.0",

    # CLI display + input
    "rich>=13.0",
    "prompt-toolkit>=3.0.50",

    # MCP server
    "fastmcp>=3.0.0",
]

# Development and testing tools
dev = [
    "pytest>=7.3.0",        # --strict-markers requires 7.3+
    "pytest-asyncio>=0.21", # asyncio_mode="auto" requires 0.21+
    "pytest-cov>=4.1.0",
    "pytest-forked",        # Required on Sherlock (exclusive GPU process mode)
    "ruff",
    "mypy",
    "pre-commit",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "ipymol",
    "matplotlib",
    "docstring-parser",
]

# Everything
all = [
    "proto-language[api,dev]",
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-language"
Repository = "https://github.com/evo-design/proto-language"
Documentation = "https://github.com/evo-design/proto-language#readme"
"Bug Tracker" = "https://github.com/evo-design/proto-language/issues"


[tool.setuptools.packages.find]
include = ["proto_language*", "api*", "agent*", "mcp*"]
exclude = ["tests*", "examples*", "*.tests*", "*.tests", "proto-tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["proto-tools", "*.egg", ".*", "build", "dist"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "cpu: CPU-only tests",
    "gpu: GPU-required tests",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests (require external tools like MAFFT). Skipped by default.",
    "e2e: End-to-end tests (start real a cache + API server). Skipped by default.",
    "skip_ci: Skip test in GitHub Actions CI",
    "only_chimera: Test only runs on Chimera cluster (arc-slurm)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for research code
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".venvs",
    "*/.venvs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["F401", "F841", "I"]

[tool.ruff.lint.isort]
known-first-party = ["proto_language", "api", "agent", "mcp"]
