[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-language"
version = "1.2.12"
description = "A high level programming language for generative biology"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Proto Bio Team"}
]

requires-python = ">=3.10"

# Core dependencies
dependencies = [
    # Core framework
    "pydantic>=2.0",

    # Scientific computing
    "numpy>=1.20",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3.0",

    # Bioinformatics
    "biopython>=1.81",
    "biotite>=0.38.0,<1.2.0",
    "rdkit",
    "pymol-open-source",

    # Utilities
    "tqdm",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-language"
Repository = "https://github.com/evo-design/proto-language"

[project.optional-dependencies]
# Development and testing tools
dev = [
    "pytest>=7.3.0",        # --strict-markers requires 7.3+
    "pytest-asyncio>=0.21", # asyncio_mode="auto" requires 0.21+
    "pytest-cov>=4.1.0",
    "pytest-forked",        # Required on Sherlock (exclusive GPU process mode)
    "ruff",
    "mypy",
    "pre-commit",
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "ipymol",
    "matplotlib",
    "docstring-parser",
]


[tool.setuptools.packages.find]
include = ["proto_language*"]
exclude = ["tests*", "examples*", "*.tests*", "*.tests", "proto-tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["proto-tools", "*.egg", ".*", "build", "dist"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "cpu: CPU-only tests",
    "gpu: GPU-required tests",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests (require external tools like MAFFT). Skipped by default.",
    "skip_ci: Skip test in GitHub Actions CI",
    "only_chimera: Test only runs on Chimera cluster (arc-slurm)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for research code
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".venvs",
    "*/.venvs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["F401", "F841", "I"]

[tool.ruff.lint.isort]
known-first-party = ["proto_language"]
