[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-language"
version = "0.0.0"
description = "A high level programming language for generative biology"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Proto Bio Team"}
]

requires-python = ">=3.10"

# Core dependencies
dependencies = [
    # Core framework
    "pydantic>=2.0",

    # Scientific computing
    "numpy>=1.20",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3.0",

    # Bioinformatics
    "biopython>=1.81",
    "biotite>=0.38.0,<1.2.0",
    "rdkit",

    # Notebooks & visualization
    "jupyter",
    "ipykernel",
    "ipywidgets",
    "ipymol",
    "py3Dmol",
    "matplotlib",

    # Utilities
    "tqdm",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/evo-design/proto-language"
Repository = "https://github.com/evo-design/proto-language"

[project.optional-dependencies]
# Development and testing tools
dev = [
    "pytest>=7.3.0",        # --strict-markers requires 7.3+
    "pytest-asyncio>=0.21", # asyncio_mode="auto" requires 0.21+
    "pytest-cov>=4.1.0",
    "pytest-forked",        # Required on Sherlock (exclusive GPU process mode)
    "pytest-randomly>=3.15",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "docstring-parser",
]


[tool.setuptools.packages.find]
include = ["proto_language*"]
exclude = ["tests*", "examples*", "*.tests*", "*.tests", "proto-tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["proto-tools", "*.egg", ".*", "build", "dist"]
pythonpath = ["."]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "--durations=20",
]
markers = [
    "asyncio: mark test as requiring asyncio",
    "uses_cpu: CPU-only tests (auto-applied to non-GPU tests by conftest)",
    "uses_gpu: GPU-required tests",
    "slow: Slow tests that may take several minutes",
    "integration: Integration tests (require external tools like MAFFT). Skipped by default.",
    "skip_ci: Skip test in GitHub Actions CI",
    "only_chimera: Test only runs on Chimera cluster (arc-slurm)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(name)s | %(message)s"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code", "deprecated"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    # Scientific / ML (only modules actually imported from proto_language/)
    "biotite.*",
    "rdkit.*",
    "promoter_calculator.*",
    # Data / cloud (stubs exist but not installed — add pandas-stubs, types-openpyxl to adopt)
    "pandas.*",
    "openpyxl.*",
    # Visualization / other
    "pymol.*",
    "vortex.*",
    # Submodule (proto-tools)
    "proto_tools.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".venvs",
    "*/.venvs",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
    "proto-tools",
    "examples",
]

[tool.ruff.lint]
select = [
    # ── Tier 1: Essential ─────────────────────────────────────────────
    "F",        # Pyflakes — unused imports/vars, undefined names
    "E",        # pycodestyle errors — comparison bugs, syntax
    "W",        # pycodestyle warnings — whitespace
    "I",        # isort — import ordering (fully auto-fixable)
    "UP",       # pyupgrade — modernize syntax (almost fully auto-fixable)
    "B",        # flake8-bugbear — mutable defaults, exception chaining
    "S",        # flake8-bandit — security (hardcoded creds, SQL injection, eval)
    "T20",      # flake8-print — debug print() left behind
    "ERA",      # eradicate — commented-out code
    "D",        # pydocstyle — Google convention docstring quality
    # ── Tier 2: Strongly recommended ──────────────────────────────────
    "SIM",      # flake8-simplify — collapse nested ifs, use builtins
    "C4",       # flake8-comprehensions — unnecessary list()/dict() wrappers
    "RET",      # flake8-return — clean up return patterns
    "PIE",      # flake8-pie — unnecessary pass, duplicate class fields
    "RUF",      # Ruff-specific — mutable defaults, missing f-prefix
    "PERF",     # Perflint — performance anti-patterns
    "FURB",     # refurb — modern Python idioms (fully auto-fixable)
    "PLE",      # Pylint errors — real bugs
    "PLW",      # Pylint warnings — subprocess without check
    "ARG",      # flake8-unused-arguments — unused function arguments
    "TID",      # flake8-tidy-imports — ban relative imports
    "ASYNC",    # flake8-async — async anti-patterns
    "A",        # flake8-builtins — catch shadowing of Python builtins
]
ignore = [
    "E501",     # line too long — let `ruff format` handle this
    "PLW1641",  # eq-without-hash — Pydantic models handle __hash__; non-Pydantic uses are intentional
    "D105",     # missing magic method docstring — __repr__, __eq__ are self-documenting
    "RUF022",   # unsorted-__all__ — keep logical grouping with section comments
    "A002",     # argument-shadowing-builtin — `format` param is intentional for export functions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert is the whole point of tests
    "S105",     # hardcoded password strings ok in test fixtures
    "S106",     # hardcoded passwords ok in test fixtures
    "S110",     # try-except-pass ok in test cleanup
    "S112",     # try-except-continue ok in test loops
    "ERA001",   # commented-out test code sometimes intentional
    "B017",     # assert-raises-exception — test patterns, refactor later
    "SIM117",   # multiple-with-statements — readability preference in tests
    "D100", "D101", "D102", "D103", "D104", "D106", "D107",  # docstring presence rules relaxed in tests
    "ARG",      # pytest fixtures appear as unused arguments
]

[tool.ruff.lint.isort]
known-first-party = ["proto_language"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.run]
branch = true
source = ["proto_language"]
omit = [
    "*/tests/*",
    # Git submodule (source already filters; defensive)
    "proto-tools/*",
    # Constraint plugins: tool-bound, only @pytest.mark.integration tests
    "proto_language/constraint/*/*",
    # Logging stdlib wrapper: handler plumbing
    "proto_language/utils/logging_config.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

